---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 28/11/2025
  changes:
    - Create a function to generate equipment prototypes.
    - Create a function to generate prototypes of equipment with a recipe.
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 15/11/2025
  fixes:
    - Corrected processUnlockIngredients, a possible confusion in the use of the function, using it to create ingredients instead of science ingredients.
    - attempt to call field 'anyFunction' (a nil value)
    - Falha ao carregar mods: __Dyson-Sphere-Program-Lib__/data/recursos.lua:11: attempt to call field 'createOre' (a nil value) stack traceback: __Dyson-Sphere-Program-Lib__/data/recursos.lua:11: in main chunk	[C]: in function 'require'	__Dyson-Sphere-Program-Lib__/data.lua:5: in main chunk
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 15/11/2025
  fixes:
    - __LDA-LIB__/init.lua:26: module __LDA-LIB__/functions/create-item-with-recipe-matrix not found;  no such file __LDA-LIB__/functions/create-item-with-recipe-matrix.luastack traceback:	[C]: in function 'require'	__LDA-LIB__/init.lua:26: in main chunk	[C]: in function 'require'	__LDA-LIB__/control.lua:2: in main chunk.
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 15/11/2025
  Changes:
    - initial commit.